--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -15,7 +15,7 @@
                         <div class="caption">
                             <h3>{{ listing.title }}</h3>
                             <h4>{{ listing.description }}</h4>
-                            <h4>{{listing.start_bid}}$</h4>
+                            <h4>Last Bid: <strong>{{listing.current_price}}$</strong></h4>
                             <!-- View Details -->
                             <a href="{% url 'listing_details' listing.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
 
