--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,38 +2,38 @@
 
 {% block body %}
 <div class="container-fluid listings-container" xmlns="http://www.w3.org/1999/html">
-
+    <div class="row display-flex">
     <!-- Albums -->
-    <div class="row">
         {% if all_listings %}
             {% for listing in all_listings %}
-                <div class="col-sm-4">
+                <div class="col-lg-3 col-sm-6 text-center">
                     <div class="thumbnail">
                         <a href="{% url 'listing_details' listing.id %}">
                             <img src="{{ listing.image }}" class="img-responsive" >
                         </a>
                         <div class="caption">
-                            <h3>{{ listing.title }}</h3>
-                            <h4>{{ listing.description }}</h4>
-                            <h4>Last Bid: <strong>{{listing.current_price}}$</strong></h4>
-                            <!-- View Details -->
-                            <a href="{% url 'listing_details' listing.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
-
-                            <!-- Delete listing -->
-                            <form action="{% url 'listing_delete' listing.id %}" method="post" style="display: inline;">
-                                {% csrf_token %}
-                                <input type="hidden" name="listing_id" value="{{ listing.id }}" />
-                                <button type="submit" class="btn btn-default btn-sm">
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                </button>
-                            </form>
+                            <h4>{{listing.title}}</h4>
+                            <p>{{listing.description}}</p>
+                            <p>Current Price: {{listing.current_price}}$</p>
                         </div>
+                        <!-- View Details -->
+                        <center>
+                        <a href="{% url 'listing_details' listing.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
+                        <!-- Delete listing -->
+                        <form action="{% url 'listing_delete' listing.id %}" method="post" style="display: inline;">
+                            {% csrf_token %}
+                            <input type="hidden" name="listing_id" value="{{ listing.id }}" />
+                            <button type="submit" class="btn btn-default btn-sm">
+                                <span class="glyphicon glyphicon-trash"></span>
+                            </button>
+                        </form>
+                        </center>
                     </div>
                 </div>
             {% endfor %}
         {% else %}
-             <h2>No Active listings</h2>
-        </div>
+             <center><h2>No Active listings</h2></center>
         {% endif %}
+    </div>
 </div>
 {% endblock %}
